# budgie-helper

./: .gitmodules  Makefile.am  NEWS  autogen.sh  budgie-helper.doap  configure.ac
budgie-helper/: Makefile.am  flashback.gresource.xml  gf-application.c  gf-main.c  gf-session.c
budgie-helper/libautomount-manager/: Makefile.am
budgie-helper/libbluetooth-applet/: Makefile.am
budgie-helper/libcommon/: Makefile.am  gf-popup-window.c
budgie-helper/libdesktop-background/: Makefile.am  gf-desktop-background.c
budgie-helper/libdisplay-config/: Makefile.am  flashback-confirm-dialog.c  flashback-confirm-dialog.ui  flashback-display-config.c  flashback-monitor-config.c  flashback-monitor-manager.c
budgie-helper/libend-session-dialog/: Makefile.am  gf-inhibit-dialog.c  gf-inhibit-dialog.ui
budgie-helper/libidle-monitor/: Makefile.am
budgie-helper/libinput-sources/: Makefile.am  gf-input-sources.c
budgie-helper/libpolkit/: Makefile.am  flashback-authenticator.c  flashback-polkit-dialog.c  flashback-polkit-dialog.ui
budgie-helper/libpower-applet/: Makefile.am
budgie-helper/libscreencast/: Makefile.am
budgie-helper/libscreenshot/: Makefile.am
budgie-helper/libshell/: Makefile.am  flashback-label-window.h
budgie-helper/libsound-applet/: Makefile.am
budgie-helper/libworkarounds/: Makefile.am  gf-workarounds.c
data/: Makefile.am
data/applications/: Makefile.am  budgie-helper-init.desktop.in
data/autostart/: Makefile.am  budgie-helper-nm-applet.desktop.in  budgie-helper-screensaver.desktop.in  budgie-helper.desktop.in
data/directories/: Makefile.am
data/menus/: Makefile.am  budgie-helper-applications.menu
data/schemas/: Makefile.am  com.solus-project.budgie-helper.gschema.xml  com.solus-project.budgie-wm.gschema.xml
data/sessions/: Makefile.am  budgie-helper-compiz.session  budgie-helper-metacity.session
data/xsessions/: Makefile.am  budgie-helper-compiz.desktop.in.in  budgie-helper-metacity.desktop.in.in
modulesets/: budgie-helper-3.14.modules  budgie-helper-3.16.modules  budgie-helper-3.18.modules  budgie-helper-3.20.modules
po/: POTFILES.in  bs.po  cs.po  de.po  el.po  es.po  he.po  hu.po  id.po  nb.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  zh_HK.po  zh_TW.po
